# smstore-actions

./: .gitignore  Dockerfile  Dockerfile.local  README.md  docker-compose.yaml  pyproject.toml  start_dev.sh
.semaphore/: pipeline_2.yml  pipeline_3.yml  semaphore.yml
k8s/: deployment.yaml  ingress.yaml  service.yaml
src/: main.py
src/auth/: auth_bearer.py  auth_handler.py
src/config/: graphql_client.py  meili_search.py  settings.py
src/core/: __init__.py  app_exceptions.py  request_exceptions.py  service_result.py
src/helper/: __init__.py
src/mail_templates/: account_activate.html  forgot_password.html
src/mutations/: insert_order.py  insert_product.py  insert_store.py  insert_user.py  update_user_field.py
src/queries/: fetch_login_user.py  fetch_product.py  fetch_unactivate_user.py
src/routers/: order.py  product.py  user.py
src/schemas/: __init__.py  order.py  product.py  user.py
src/services/: __init__.py  order.py  product.py  user.py
