[tool.poetry]
name = "smstore-actions"
version = "0.1.0"
description = ""
authors = ["Nguyen Duc Duy <nguyenducduy.it@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
beeprint = "^2.4.10"
python-dotenv = "^0.14.0"
gql = "^2.0.0"
python-multipart = "^0.0.5"
elasticsearch-async = "^6.2.0"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
