[tool.poetry]
name = "smstore-actions"
version = "0.1.0"
description = ""
authors = ["Nguyen Duc Duy <nguyenducduy.it@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.8"
fastapi = "^0.61.1"
uvicorn = "^0.12.2"
beeprint = "^2.4.10"
python-dotenv = "^0.14.0"
gql = "^2.0.0"
sentry-sdk = "^1.3.1"
passlib = "^1.7.4"
bcrypt = "^3.2.0"
python-jose = "^3.3.0"
httplib2 = "^0.19.1"
pycrypto = "^2.6.1"
meilisearch = "^0.16.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
